# TodoApp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yml
.github/workflows/: build_and_deploy_app_function.yml  build_and_deploy_web_app.yml
functions/: function_app.py  requirements.txt
infra/: main.tf  outputs.tf  variables.tf
src/: auth.rs  configuration.rs  lib.rs  main.rs  model.rs  repositories.rs  startup.rs  telemetry.rs
src/routes/: healthcheck.rs  homepage.rs  mod.rs
src/routes/me/todos/: delete.rs  get.rs  patch.rs  post.rs
static/: style.css
templates/: index.html  todos.html
