[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
anyhow = "1.0.95"
azure_data_cosmos = "0.21.0"
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
config = "0.15.5"
futures = "0.3.31"
opentelemetry = "0.27.1"
opentelemetry-application-insights = { version = "0.37.0", features = [
    "reqwest",
    "reqwest-client",
    "live-metrics",
] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio", "tokio"] }
reqwest = "0.12.12"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tera = "1.20.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full", "rt"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "serde"] }
